@@ -16,12 +16,12 @@
 set -e
 unset CDPATH
 
-if [ "$#" -lt 2 ]; then
-  echo "Usage: $0 <instance-id> <table-names-as-args>"
+if [ "$#" -ne 2 ]; then
+  echo "Usage: $0 <instance-id> <number-of-tasks>"
   exit 1
 fi
 
-SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd .. && pwd)
+SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd ../.. && pwd)
 
 TEMPLATE_DIR=${SCRIPTS_DIR}/templates
 JAR_DIR=${SCRIPTS_DIR}/jars
@@ -29,8 +29,6 @@ JAR_DIR=${SCRIPTS_DIR}/jars
 VERSION=$(cat "${TEMPLATE_DIR}/version.txt")
 
 echo "-------------------------------------------------------"
-echo "Running compaction job creation"
+echo "Running compaction tasks"
 echo "-------------------------------------------------------"
-java -cp "${JAR_DIR}/clients-${VERSION}-utility.jar" \
-  --add-opens java.base/java.nio=ALL-UNNAMED \
-  sleeper.clients.compaction.CreateCompactionJobsClient DEFAULT "$@"
+java -cp "${JAR_DIR}/clients-${VERSION}-utility.jar" sleeper.common.task.RunCompactionTasks "$@"
